--- a/src/app/components/comparacion-pilotos/comparacion-pilotos.component.html
+++ b/src/app/components/comparacion-pilotos/comparacion-pilotos.component.html
@@ -20,7 +20,7 @@
     <div class="d-flex justify-content-center comp mx-4 mb-3 mb-lg-4">
         <form class="mt-3" [formGroup]="comparacionForm" (ngSubmit)="getComparacion()">
             <div class="mb-3">
-                <input type="text" class="form-control text-center celda2" id="year" formControlName="year"
+                <input type="text" class="form-control text-center celda2" id="year" formControlName="year" 
                     autocomplete="null" placeholder="Year">
                 <div class="text-danger"
                     *ngIf="comparacionForm.get('year')?.hasError('required') && comparacionForm.get('year')?.touched">
@@ -30,13 +30,14 @@
 
                 <div class="mb-3">
                     <input type="text" class="form-control text-center celda2" id="nombre" formControlName="piloto1"
-                        autocomplete="null" placeholder="1st Driver">
+                        autocomplete="null" pattern="[A-Z]{3}" maxlength="3"
+                        placeholder="1st Driver">
                 </div>
 
 
                 <div class="mb-3">
                     <input type="text" class="form-control text-center celda2" id="pais" formControlName="piloto2"
-                        autocomplete="null" placeholder="2nd Driver">
+                        autocomplete="null"  pattern="[A-Z]{3}" maxlength="3" placeholder="2nd Driver">
                 </div>
 
                 <div class="mb-3">
