--- a/src/app/components/mostrar-resultados/mostrar-resultados.component.html
+++ b/src/app/components/mostrar-resultados/mostrar-resultados.component.html
@@ -18,7 +18,7 @@
   <form class="mt-3" [formGroup]="yearForm" (ngSubmit)="obtenerResultado()">
     <div class="mb-3 insideIcons ">
      
-      <input type="text" class="form-control celda " id="year" *ngIf="variableAno" formControlName="year"
+      <input type="number" class="form-control celda " id="year" *ngIf="variableAno" formControlName="year"
         autocomplete="null" placeholder="Insert year">
         
         
